--- a/.azure-pipelines/common-templates/checkout.yml
+++ b/.azure-pipelines/common-templates/checkout.yml
@@ -37,4 +37,12 @@ steps:
         git pull
         git status
 
+  - task: PowerShell@2
+    displayName: "Update Git Submodules"
+    inputs:
+      targetType: inline
+      script: |
+        git pull --recurse-submodules
+        git submodule update --init --recursive --remote
+
   - template: ./security-pre-checks.yml
