--- a/.azure-pipelines/common-templates/install-tools.yml
+++ b/.azure-pipelines/common-templates/install-tools.yml
@@ -29,7 +29,13 @@ steps:
   - task: NodeTool@0
     displayName: Install NodeJs
     inputs:
-      versionSpec: 15.x
+      versionSpec: '14.15.5'
+      
+  - task: Npm@1
+    displayName: Install AutoRest
+    inputs:
+      command: custom
+      customCommand: install -g autorest@latest
 
   - task: Npm@1
     displayName: Install Rush
