--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,4 @@
 	path = autorest.powershell
 	url = https://github.com/microsoftgraph/autorest.powershell
 	branch = powershell-v2
+	fetch = refs/remotes/origin/powershell-v2
