--- a/.azure-pipelines/common-templates/checkout.yml
+++ b/.azure-pipelines/common-templates/checkout.yml
@@ -43,6 +43,6 @@ steps:
       targetType: inline
       script: |
         git pull --recurse-submodules
-        git submodule update --init --recursive --remote
+        git submodule sync
 
   - template: ./security-pre-checks.yml
