--- a/.azure-pipelines/weekly-generation.yml
+++ b/.azure-pipelines/weekly-generation.yml
@@ -74,7 +74,7 @@ extends:
         displayName: Refresh OpenApi documents
         timeoutInMinutes: 240
         steps:
-        - template: common-templates/download-openapi-docs.yml
+        - template: .azure-pipelines/common-templates/download-openapi-docs.yml
           parameters:
             Branch: $(Branch)
             BaseBranch: $(BaseBranch)
@@ -104,35 +104,35 @@ extends:
               publishVstsFeed: $(PROJECT_NAME)/$(FEED_NAME)
               allowPackageConflicts: true
         steps:
-        - template: ./common-templates/checkout.yml@self
+        - template: .azure-pipelines/common-templates/checkout.yml@self
           parameters:
             TargetBranch: $(WeeklyBranch)
-        - template: ./common-templates/install-tools.yml@self
-        - template: ./common-templates/security-pre-checks.yml@self
-        - template: ./generation-templates/authentication-module.yml@self
+        - template: .azure-pipelines/common-templates/install-tools.yml@self
+        - template: .azure-pipelines/common-templates/security-pre-checks.yml@self
+        - template: .azure-pipelines/generation-templates/authentication-module.yml@self
           parameters:
             Test: ${{ parameters.Test }}
             Pack: ${{ parameters.Pack }}
             Sign: ${{ parameters.Sign }}
-        - template: ./generation-templates/workload-modules.yml@self
+        - template: .azure-pipelines/generation-templates/workload-modules.yml@self
           parameters:
             Test: ${{ parameters.Test }}
             Pack: ${{ parameters.Pack }}
             Sign: ${{ parameters.Sign }}
-        - template: ./generation-templates/meta-module.yml@self
+        - template: .azure-pipelines/generation-templates/meta-module.yml@self
           parameters:
             Test: ${{ parameters.Test }}
             Pack: ${{ parameters.Pack }}
             Sign: ${{ parameters.Sign }}
         - ${{ if and(eq(parameters.Pack, true), eq(parameters.Sign, true)) }}:
-          - template: ./common-templates/esrp/codesign-nuget.yml@self
+          - template: .azure-pipelines/common-templates/esrp/codesign-nuget.yml@self
             parameters:
               FolderPath: "$(Build.ArtifactStagingDirectory)"
               Pattern: "Microsoft.Graph*.nupkg"
-        - template: ./generation-templates/generate-command-metadata.yml@self
-        - template: ./common-templates/security-post-checks.yml@self
+        - template: .azure-pipelines/generation-templates/generate-command-metadata.yml@self
+        - template: .azure-pipelines/common-templates/security-post-checks.yml@self
         - ${{ if eq(parameters.CreatePullRequest, true) }}:
-          - template: ./common-templates/create-pr.yml@self
+          - template: .azure-pipelines/common-templates/create-pr.yml@self
             parameters:
               BaseBranch: $(BaseBranch)
               TargetBranch: $(WeeklyBranch)
@@ -179,7 +179,7 @@ extends:
               git push "https://$(GITHUB_TOKEN)@github.com/microsoftgraph/msgraph-sdk-powershell.git"
               git status
         - ${{ if eq(parameters.CreatePullRequest, true) }}:
-          - template: ./common-templates/create-pr.yml@self
+          - template: .azure-pipelines/common-templates/create-pr.yml@self
             parameters:
               BaseBranch: $(GenerationBranch)
               TargetBranch: $(ComputeGenerationBranch.WeeklyGenerationBranch)
