--- a/.azure-pipelines/weekly-generation.yml
+++ b/.azure-pipelines/weekly-generation.yml
@@ -65,6 +65,8 @@ extends:
       name: Azure-Pipelines-1ESPT-ExDShared
       image: windows-2022
       os: windows
+    sdl:
+      suppressionFile: .azure-pipelines/config/credscan/cresdscan-suppressions.json
     customBuildTags:
     - ES365AIMigrationTooling
     stages:
