--- a/.azure-pipelines/weekly-examples-update.yml
+++ b/.azure-pipelines/weekly-examples-update.yml
@@ -40,7 +40,8 @@ extends:
       image: windows-2022
       os: windows
     sdl:
-      suppressionsFile: .azure-pipelines/config/credscan/cresdscan-suppressions.json
+      credscan:
+        suppressionsFile: .azure-pipelines/config/credscan/cresdscan-suppressions.json
     customBuildTags:
     - ES365AIMigrationTooling
     stages:
