--- a/.azure-pipelines/weekly-generation.yml
+++ b/.azure-pipelines/weekly-generation.yml
@@ -66,7 +66,8 @@ extends:
       image: windows-2022
       os: windows
     sdl:
-      suppressionsFile: .azure-pipelines/config/credscan/cresdscan-suppressions.json
+      credscan:
+        suppressionsFile: .azure-pipelines/config/credscan/cresdscan-suppressions.json
     customBuildTags:
     - ES365AIMigrationTooling
     stages:
